# extractforms

./: .env.template  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  README.md  SKILLS.md  agent.md  plan.md  pyproject.toml  ruff.toml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: release.yml
docs/adr/: 0001-modular-typing-models-and-schema-load-hardening.md
scripts/: clear_results.sh  run_raw_examples.sh
skills/architecture/: SKILL.md
skills/code-style/: SKILL.md
skills/release/: SKILL.md
skills/testing/: SKILL.md
skills/tooling/: SKILL.md
src/extractforms/: __init__.py  _bootstrap.py  async_runner.py  cli.py  dependencies.py  exceptions.py  extractor.py  field_normalization.py  logging.py  models.py  page_filtering.py  pdf_render.py  pricing.py  prompts.py  schema_store.py  settings.py
src/extractforms/backends/: __init__.py  multimodal_openai.py  ocr_document_intelligence.py  ocr_text_normalizer.py  protocol.py
src/extractforms/processing/: __init__.py  page_selection.py
src/extractforms/typing/: __init__.py  enums.py  models.py  protocol.py
src/extractforms/typing/models/: __init__.py  extraction.py  json_schema.py  page_selection.py  schema.py
tests/: conftest.py
tests/end2end/: test_cli_help.py  test_typed_fields_flow.py
tests/integration/: test_extraction_routing.py  test_imports.py
tests/unit/: test___init__.py  test_async_runner.py  test_backends.py  test_backends_protocol.py  test_cli.py  test_dependencies.py  test_enums.py  test_exceptions.py  test_extractor.py  test_field_normalization.py  test_logging.py  test_page_filtering.py  test_pdf_render.py  test_pricing.py  test_prompts.py  test_schema_store.py  test_settings.py
tests/unit/backends/: test_multimodal_openai.py  test_ocr_document_intelligence.py  test_ocr_text_normalizer.py
tests/unit/processing/: test_normalization.py  test_page_selection.py
tests/unit/typing/: test_enums.py  test_models.py  test_protocol.py
