[project]
  name = "extractforms"
  version = "0.1.0"
  description = "A python project to turn scanned forms into a list of key-value pairs."
  readme = "README.md"
  requires-python = ">=3.13"
  authors = [
    { name = "Guillaume Lombardo", email = "g1lom@later.day" },
  ]
  license = { text = "MIT" }
  keywords = ["automation", "cli", "package", "python"]
  classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
  ]
  dependencies = [
    "certifi>=2026.1.4",
    "httpx>=0.28.1",
    "openai>=2.1.0",
    "pydantic-settings>=2.13.0",
    "pydantic>=2.12.0",
    "pymupdf>=1.26.5",
    "python-dotenv>=1.1.0",
    "structlog>=25.5.0",
  ]

[dependency-groups]
  dev = [
    "build>=1.3.0",
    "detect-secrets>=1.5.0",
    "pre-commit>=4.5.1",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "pytest>=9.0.2",
    "ruff>=0.15.0",
    "twine>=6.2.0",
    "ty>=0.0.15",
  ]

  [project.urls]
    Homepage = "https://github.com/Guillaume-Lombardo/extractforms"
    Repository = "https://github.com/Guillaume-Lombardo/extractforms"
    Issues = "https://github.com/Guillaume-Lombardo/extractforms/issues"

  [project.scripts]
    extractforms = "extractforms.cli:main"

[build-system]
  requires = ["hatchling>=1.27.0"]
  build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
  packages = ["src/extractforms"]

[tool.hatch.build.targets.sdist]
  include = [
    "LICENSE",
    "README.md",
    "pyproject.toml",
    "src/extractforms",
  ]

[tool.pytest.ini_options]
  minversion = "9.0"
  testpaths = ["tests"]
  addopts = "-ra -q -m unit --strict-markers --cov=src --cov-report=term-missing:skip-covered --cov-report=html"
  pythonpath = ["src"]
  markers = [
    "end2end: mark a test as an end-to-end test.",
    "integration: mark a test as an integration test.",
    "unit: mark a test as a unit test.",
  ]

[tool.coverage.run]
  branch = true
  source = ["src/extractforms"]
  omit = ["*/tests/*"]

[tool.coverage.report]
  show_missing = true
  skip_covered = true
  precision = 2
  fail_under = 80

[tool.coverage.html]
  directory = "htmlcov"
  title = "ExtractForms coverage"
